added generic cli
